@@ -1,7 +1,6 @@
+bad-reversed-sequence:40:10:test:The first reversed() argument is not a sequence
 bad-reversed-sequence:43:10:test:The first reversed() argument is not a sequence
-bad-reversed-sequence:46:10:test:The first reversed() argument is not a sequence
+bad-reversed-sequence:44:10:test:The first reversed() argument is not a sequence
 bad-reversed-sequence:47:10:test:The first reversed() argument is not a sequence
+bad-reversed-sequence:48:10:test:The first reversed() argument is not a sequence
 bad-reversed-sequence:50:10:test:The first reversed() argument is not a sequence
-bad-reversed-sequence:51:10:test:The first reversed() argument is not a sequence
-bad-reversed-sequence:53:10:test:The first reversed() argument is not a sequence
-bad-reversed-sequence:54:10:test:The first reversed() argument is not a sequence
