@@ -47,6 +47,11 @@ Release date: TBA
 * Use ``py-version`` setting for alternative union syntax check (PEP 604),
   instead of the Python interpreter version.
 
+* Subclasses of ``dict`` are regarded as reversible by the ``bad-reversed-sequence`` checker
+  (Python 3.8 onwards).
+
+  Closes #4981
+
 
 What's New in Pylint 2.11.2?
 ============================
